Refactor and include FullGC called after startup.